# statchemlib

./: .gitignore  AUTHORS  CMakeLists.txt  README
cmake/: BuildGSL.cmake  BuildOpenMM.cmake  FindOpenMM.cmake
data/: amber10.xml  csd_complete_distance_distributions.txt.xz  tip3p.xml
include/statchem/: statchemexport.hpp
include/statchem/capi/: capi.hpp
include/statchem/fileio/: fileout.hpp  inout.hpp  xzfile.hpp
include/statchem/fragmenter/: fragmenter.hpp  unique.hpp
include/statchem/geometry/: coordinate.hpp  geometry.hpp  matrix.hpp  pca.hpp  quaternion.hpp
include/statchem/graph/: graph.hpp  mcqd.hpp  mnts.hpp  ullsubstate.hpp  vertex.hpp
include/statchem/helper/: array1d.hpp  array2d.hpp  array3d.hpp  benchmark.hpp  debug.hpp  error.hpp  grep.hpp  help.hpp  logger.hpp  path.hpp  renamerules.hpp  smiles.hpp
include/statchem/kabsch/: kabsch.hpp
include/statchem/modeler/: forcefield.hpp  modeler.hpp  systemtopology.hpp  topology.hpp
include/statchem/molib/: assembly.hpp  atom.hpp  atomtype.hpp  bond.hpp  bondtype.hpp  chain.hpp  element.hpp  grid.hpp  internal.hpp  it.hpp  model.hpp  molecule.hpp  molecules.hpp  nrset.hpp  residue.hpp
include/statchem/parser/: fileparser.hpp  parser.hpp
include/statchem/score/: interpolation.hpp  kbff.hpp  powerfit.hpp  score.hpp  xscore.hpp
lib/: CMakeLists.txt
lib/capi/: capi.cpp
lib/fileio/: complex.cpp  inout.cpp  print_mol2.cpp  xzfile.cpp
lib/fragmenter/: fragmenter.cpp  unique.cpp
lib/geometry/: coordinate.cpp  geom3d.cpp  matrix.cpp  pca.cpp
lib/graph/: mcqd.cpp  mnts.cpp
lib/helper/: grep.cpp  help.cpp  path.cpp  smiles.cpp
lib/interface/: interface.cpp
lib/kabsch/: kabsch.cpp
lib/modeler/: forcefield.cpp  modeler.cpp  systemtopology.cpp  topology.cpp
lib/molib/: assembly.cpp  atom.cpp  atomtype.cpp  bond.cpp  bondtype.cpp  chain.cpp  element.cpp  hydrogens.cpp  internal.cpp  model.cpp  molecule.cpp  molecules.cpp  nrset.cpp  residue.cpp
lib/parser/: fileparser.cpp  mol2parser.cpp  parser.cpp  pdbparser.cpp
lib/score/: interpolation.cpp  kbff.cpp  powerfit.cpp  score.cpp  xscore.cpp
src/: CMakeLists.txt  Program.hpp  ProgramManager.cpp  ProgramManager.hpp  main.cpp
src/programs/: AllScorePose.cpp  AllScorePose.hpp  AssignAtomTypes.cpp  AssignAtomTypes.hpp  KBDynamics.cpp  KBDynamics.hpp  KBMinimize.cpp  KBMinimize.hpp  MakeObjective.cpp  MakeObjective.hpp  PhysDynamics.cpp  PhysDynamics.hpp  PhysMinimize.cpp  PhysMinimize.hpp  ScorePose.cpp  ScorePose.hpp  common.hpp
tests/: CMakeLists.txt  dynamics.cpp  minization.cpp  property_calculations.cpp  score.cpp
tests/capi/: connectivity.c  read.c  retyping.c  write.c
tests/files/: benzene.mol2  drugs.mol2
tests/files/expected_results/: drugs_seeds.txt
